[package]
name = "bt"
description = "An intuitive Bluetooth CLI"
authors = ["Profi06"]
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["cargo"] }
clap_complete = "4.5.1"
regex = "1.10.4"
